First commit: HTML file

--- a/intel.html
+++ b/intel.html
@@ -10,7 +10,16 @@
     <body>
     <h1>Manejo de tiempo</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias eligendi iure voluptates harum laborum molestiae, iusto beatae ipsum, ab repellendus, modi quis. Autem, magni quaerat? Impedit tenetur fugit accusantium perferendis.</p>
- </body>
+ 
+    <hr />
+
+    <ol>
+<li>numero </li>
+<li>numero </li>
+<li>numero </li>
+    </ol>
+
+</body>
  </div>
 
  <div>
@@ -23,7 +32,7 @@
       </li>
    </span>
  </div>
- 
+ <hr />
  <div>
    <td>nombre</td>
    <img src="c:\Users\User\OneDrive\Imágenes\WhatsApp Image 2022-12-22 at 11.31.12.jpeg"
